// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LineSyncedLyricsLine > (Snapshot) renders a line halfway through 1`] = `
<div>
  <button
    class="hover:text-foreground block w-full cursor-pointer py-1 text-left transition-colors duration-100 text-foreground"
    data-active="true"
    data-testid="lyrics-line"
    type="button"
  >
    <span
      class="block"
    >
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all duration-300 ease-out"
        style="background-size: 100%;"
      >
        Lorem ipsum dolor sit amet
      </span>
    </span>
  </button>
</div>
`;

exports[`LineSyncedLyricsLine > (Snapshot) renders a line that has already played 1`] = `
<div>
  <button
    class="hover:text-foreground block w-full cursor-pointer py-1 text-left transition-colors duration-100 text-foreground/40"
    data-active="false"
    data-testid="lyrics-line"
    type="button"
  >
    <span
      class="block"
    >
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all duration-300 ease-out"
        style="background-size: 0%;"
      >
        Lorem ipsum dolor sit amet
      </span>
    </span>
  </button>
</div>
`;

exports[`LineSyncedLyricsLine > (Snapshot) renders a line that has not played yet 1`] = `
<div>
  <button
    class="text-foreground/60 hover:text-foreground block w-full cursor-pointer py-1 text-left transition-colors duration-100"
    data-active="false"
    data-testid="lyrics-line"
    type="button"
  >
    <span
      class="block"
    >
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all duration-300 ease-out"
        style="background-size: 0%;"
      >
        Lorem ipsum dolor sit amet
      </span>
    </span>
  </button>
</div>
`;

exports[`LineSyncedLyricsLine > (Snapshot) renders ruby, background vocals, and annotations 1`] = `
<div>
  <button
    class="hover:text-foreground block w-full cursor-pointer py-1 text-left transition-colors duration-100 text-foreground"
    data-active="true"
    data-testid="lyrics-line"
    type="button"
  >
    <span
      class="block"
    >
      <span
        class="to-primary bg-linear-to-b from-transparent from-60% to-60% bg-no-repeat transition-all duration-300 ease-out"
        style="background-size: 100%;"
      >
        <ruby
          data-testid="lyrics-ruby"
        >
          <span
            data-testid="lyrics-ruby-text"
          >
            夜
          </span>
          <rt
            class="font-sans font-normal"
            data-testid="lyrics-ruby-reading"
          >
            よる
          </rt>
        </ruby>
        に
        <ruby
          data-testid="lyrics-ruby"
        >
          <span
            data-testid="lyrics-ruby-text"
          >
            駆
          </span>
          <rt
            class="font-sans font-normal"
            data-testid="lyrics-ruby-reading"
          >
            か
          </rt>
        </ruby>
        ける
      </span>
      <span
        class="font-semibold italic opacity-60"
        data-testid="lyrics-background-vocals"
      >
         (
        Lorem ipsum
        )
      </span>
    </span>
    <span
      class="block font-sans text-base font-normal tracking-normal opacity-60"
      data-testid="lyrics-annotation"
      data-type="romanization"
      lang="ja-Latn"
    >
      Yoru ni kakeru
    </span>
    <span
      class="block font-sans text-base font-normal tracking-normal opacity-60"
      data-testid="lyrics-annotation"
      data-type="translation"
      lang="en"
    >
      Racing into the night
    </span>
  </button>
</div>
`;
